# ATtiny10-Serial

./: .gitignore  README.md
.devcontainer/: Dockerfile  devcontainer.json
cmake/toolchains/: avr.cmake
examples/same-pin-tx-and-rx/: led.h  main.c  main.h
examples/shared-buffer/: CMakeLists.txt  CMakePresets.json  asm.S  dbg.h  main.c
src/: attiny10_serial.c  attiny10_serial.h  attiny10_serial_read.S
